# alps-discovery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.kiro/steering/: benchmark-suite.md  product.md  structure.md  tech.md
benches/: enzyme.rs  lsh.rs  persistence.rs  pipeline.rs  query.rs  scoring.rs
benches/common/: mod.rs
benchmarks/: run.py
examples/: 01_quickstart.py  02_endpoint_metadata.py  03_invoke_callable.py  04_feedback_loop.py  05_lsh_resolution.py  06_scale_and_load_balancing.py  07_limitations_summary.py  08_mcp_integration.py  09_metadata_filters.py  10_persistence.py  11_explain_mode.py  12_custom_scorer.py  p3_benchmark.py
proptest-regressions/core/: lsh.txt
python/alps_discovery/: __init__.py  _native.pyi
src/: error.rs  lib.rs  network.rs  pybridge.rs  query.rs  scorer.rs
src/core/: action.rs  chemistry.rs  config.rs  enzyme.rs  hyphae.rs  lsh.rs  membrane.rs  mod.rs  pheromone.rs  signal.rs  types.rs
src/core/spore/: tree.rs
src/network/: cooccurrence.rs  enzyme_adapter.rs  filter.rs  mod.rs  mycorrhizal.rs  persistence.rs  pipeline.rs  registry.rs  replay.rs  scorer_adapter.rs
tests/: test_a2a_integration.py  test_concurrent_safety.py  test_discovery_config.py  test_metadata_prefilter.py  test_persistence_validation.py  test_smoke.py  test_type_stubs.py
