[package]
name = "alps-discovery"
version = "0.1.0"
edition = "2021"
description = "Local agent discovery powered by bio-inspired multi-kernel routing"
license = "Apache-2.0"

[lib]
name = "alps_discovery_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.27"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1"
thiserror = "2"

[build-dependencies]
pyo3-build-config = "0.27"

[features]
default = []
extension-module = ["pyo3/extension-module"]
