[package]
name = "alps-discovery"
version = "0.1.0"
edition = "2021"
description = "Local agent discovery powered by bio-inspired multi-kernel routing"
license = "Apache-2.0"

[lib]
name = "alps_discovery_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.27"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"

[build-dependencies]
pyo3-build-config = "0.27"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[features]
default = []
extension-module = ["pyo3/extension-module"]
bench = []

[[bench]]
name = "lsh"
harness = false

[[bench]]
name = "scoring"
harness = false

[[bench]]
name = "enzyme"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "persistence"
harness = false
